--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,14 @@
 
-
-.cardcontainer {
+/* body{
+    background-color: antiquewhite;
+    color: black;
+    transition: all 1s ease-out;
+ } */
+/* .cardcontainer {
     display: flex;
     justify-content: center;
     
-}
+} */
 
 .navbar {
     padding: 0;
