--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,15 +1,29 @@
+h1{
+    display: flex;
+    justify-content: center;
+}
 
-/* body{
-    background-color: antiquewhite;
-    color: black;
-    transition: all 1s ease-out;
- } */
-/* .cardcontainer {
+body{
+    position:relative;
+    padding-bottom: 100px;
+    min-height: 98.4vh;
+    overflow-x:hidden
+    
+}
+
+.cardcontainer {
     display: flex;
     justify-content: center;
     
-} */
+    
+} 
+
+.card{
+    background-color: rgba(224, 234, 243, 0.637);
+}
 
 .navbar {
     padding: 0;
+    
 }
+
